[tool.poetry]
name = "crawreilly"
version = "0.1.0"
description = "Web crawler to crawl O'Reilly collections and scrape necessary information"
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.8.0"
python-decouple = "^3.8"
weasyprint = "^58.1"
pymongo = "^4.3.3"
chardet = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
ruff = "^0.0.255"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[tool.black]
line-length = 140
include = '\.pyi?$'
exclude = '''
/(
  \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.flake8]
max-line-length = 140
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.isort]
atomic = true
profile = "black"
line_length = 140
skip_gitignore = true

[tool.ruff]
line-length = 140
exclude = [".git", "__pycache__", "dist"]
target-version = "py39"
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
